--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#benefit-section">benefit</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#proudect">proudect</a>
+                <a class="nav-link" href="#proudect">products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact-us">contact us</a>
@@ -109,7 +109,7 @@
 
 
 <div class="proudect-container" id="proudect">
-  <h2>Our proudects </h2>
+  <h2>Our products </h2>
   <p style =" width : 70% "> we provide our top popular choose your look and immerse youself in exciting game world with complete sense of presence</p>
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
